Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27608

[clang-format] text cursor jump to document start on undo after save

XMLWordPrintable

    • 6d1478e1db (qt-creator/qt-creator/7.0) 6d1478e1db (qt-creator/tqtc-qt-creator/7.0) 6d1478e1db (qt-creator/qt-creator/8.0)

      when using the clang-format plugin, i'm seeing this behaviour:

      • user edits a document
      • user saves a document
      • user performs undo

      the expected behaviour for 'undo' is that the last user edit will be undone. but the it seems that the document formatting is undone and the text cursor jumps to the front of the document. only the next action on the undo stack will undo the last user edit.

      while it's might be reasonable to have one 'undo' operation for the formatting-on-save, it's a bit inconvenient that the cursor jumps to the front of the document (especially when working on large source files)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            artem.sokolovskii Artem Sokolovskii (Inactive)
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes