Clang Format: Fix misplaced cursor after undo

Fixed behavior, when after undo function cursor, jumps
to the start of a file.
Join the undo block generated by auto format with the
last available undo block. This will place the cursor
at the last edit position instead of the document
beginning when triggering undo.

Fixes: QTCREATORBUG-27608
Change-Id: I1bb630af00e997ac53f178594445293ceebcfa26
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>